--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,7 @@ $page-width:1180px;
 $font12:12px;
 $font14:14px;
 $font18:18px;
+$font20:20px;
 @import 'top';
 @import 'header';
 @import 'banner';
