--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,7 +1,95 @@
 %main-m-security {
     height: 1120px;
-    background-color: paleturquoise;
     margin-bottom: 20px;
+}
+
+%main-m-security1 {
+    @extend %main-m-security;
+    .main-m-security-span1 {
+        font-size: $font20;
+        line-height: 30px;
+        margin-right: 10px;
+    }
+    .main-m-security-box1 {
+        .security-pic {
+            display: block;
+            width: 580px;
+            margin-left: 0;
+            padding: 0;
+            img {
+                width: 100%;
+            }
+        }
+        .security-pic1 {
+            margin-left: 0;
+        }
+        a {
+            background-color: #fff;
+            border-radius: 4px;
+            float: left;
+            height: 460px;
+            margin-left: 17px;
+            margin-bottom: 20px;
+            overflow: hidden;
+            width: 280px;
+            padding: 30px 20px;
+            text-align: center;
+            box-sizing: border-box;
+            &:hover {
+                box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+                transform: translateY(-2px);
+                transition: 0.2s all ease-out;
+            }
+            .security-pic-p1 {
+                height: 20px;
+                margin: 0 auto;
+                overflow: hidden;
+                white-space: nowrap;
+                width: 80px;
+                background: #f17f38;
+                color: #fff;
+                text-align: center
+            }
+            .security-pic-img {
+                display: block;
+                height: 240px;
+                margin: 0 auto;
+                width: 240px;
+            }
+            .security-pic-p2 {
+                font-size: 18px;
+                line-height: 25px;
+                margin-top: 30px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+            .security-pic-p3 {
+                font-size: $font14;
+                color: #999;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+            .security-pic-p3 {
+                line-height: 36px;
+                margin-top: 10px;
+                .security-pic-p3-span1 {
+                    color: #dd0e00;
+                    font-size: $font20;
+                }
+                .security-pic-p3-span2 {
+                    color: #999;
+                    text-decoration: line-through;
+                    font-size: $font14;
+                }
+            }
+        }
+    }
+    // .main-m-security-banner{
+    //     img{
+    //     }
+    // }
 }
 
 .main {
@@ -11,11 +99,11 @@
 
 .main-content {
     width: $page-width;
-    background: rgb(148, 165, 115);
+    // background: rgb(148, 165, 115);
+    background: #ddd;
     margin: 0 auto;
     // 热门活动
     .main-cnt-activity {
-        background-color: #fff;
         margin-bottom: 20px;
         h2 {
             font-size: 20px;
@@ -51,8 +139,10 @@
         }
     }
     .main-cnt-time {
+        padding-bottom: 10px;
         .cnt-time-pic {
-            display: inline-block;
+            display: bolck;
+            float: left;
             width: 74px;
             height: 24px;
             background-image: url(https://p.ssl.qhimg.com/t019bd9e375d813e9d1.png);
@@ -60,38 +150,247 @@
             background-position: -12px -47px;
         }
         .cnt-time-pic1 {
-            display: inline-block;
+            display: block;
+            float: left;
+            margin-left: 10px;
+        }
+        .cnt-time-pic2 {
+            display: block;
+            float: left;
+            margin-left: 10px;
+        }
+        .cnt-time-pic3 {
+            display: block;
+            float: left;
+            margin-left: 10px;
+            .countdown-time {
+                background: #333;
+                border-radius: 3px;
+                color: #fff;
+                display: inline-block;
+                font-style: normal;
+                height: 25px;
+                line-height: 27px;
+                text-align: center;
+                width: 25px;
+                margin-left: 10px;
+            }
+        }
+        .cnt-time-box {
+            .cnt-time-box-left {
+                float: left;
+                &:hover {
+                    background: rgba(0, 0, 0, 0.2);
+                    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+                    transform: translateY(-2px);
+                    transition: 0.2s all ease-out;
+                }
+            }
+            .cnt-time-box-right {
+                height: 400px;
+                .time-box-right-list {
+                    background: #fff;
+                    border-radius: 4px;
+                    box-sizing: border-box;
+                    color: #333;
+                    float: left;
+                    height: 180px;
+                    margin-left: 20px;
+                    margin-bottom: 20px;
+                    padding-top: 15px;
+                    position: relative;
+                    width: 450px;
+                    &:hover {
+                        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+                        transform: translateY(-2px);
+                        transition: 0.2s all ease-out;
+                    }
+                }
+            }
+            .time-box-right-pic {
+                float: left;
+                margin-left: 10px;
+                width: 160px;
+                height: 160px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            .time-box-right-pic1 {
+                float: left;
+                margin-left: 20px;
+                h2 {
+                    line-height: 24px;
+                    height: 50px;
+                    font-size: $font18;
+                    font-style: normal;
+                    font-weight: 500;
+                }
+                .t-r-p-span1 {
+                    color: #dd0e00;
+                    font-size: 20px;
+                }
+                .t-r-p-span2 {
+                    color: #9b9b9b;
+                    font-size: 13px;
+                    text-decoration: line-through;
+                }
+                .t-r-p-b {
+                    margin-top: 30px;
+                }
+                .t-r-p-b1 {
+                    background: #333;
+                    border-radius: 4px;
+                    box-sizing: border-box;
+                    color: #fff;
+                    display: inline-block;
+                    font-size: 18px;
+                    height: 35px;
+                    line-height: 25px;
+                    margin-right: 15px;
+                    padding: 5px 0;
+                    text-align: center;
+                    width: 135px;
+                }
+                .t-r-p-b2 {
+                    border: 1px solid #ea2727;
+                    border-radius: 5px;
+                    display: inline-block;
+                    height: 10px;
+                    margin-bottom: 4px;
+                    position: relative;
+                    vertical-align: bottom;
+                    width: 60px;
+                    b {
+                        background-color: #ef312b;
+                        background-image: linear-gradient(-1deg, #ef312b, #fb5b56 87%);
+                        border-radius: 4px;
+                        height: 10px;
+                        left: 0;
+                        position: absolute;
+                        top: 0;
+                    }
+                }
+                .t-r-p-b3 {
+                    color: #333;
+                    display: inline-block;
+                    font-size: 12px;
+                    line-height: 20px;
+                    vertical-align: bottom;
+                }
+            }
         }
     }
     .main-cnt-hot {
-        height: 400px;
-        background-color: red;
         margin-bottom: 20px;
+        h2 {
+            font-size: $font20;
+            line-height: 30px;
+            margin-right: 10px;
+        }
+        .main-hot-box {
+            p {
+                float: left;
+                width: 23%;
+                margin-left: 31px;
+                img {
+                    width: 100%;
+                }
+            }
+            .main-hot-box1 {
+                margin-left: 0;
+            }
+        }
+        .main-hot-banner {
+            img {
+                margin-top: 20px;
+            }
+        }
     }
     .main-m-security1 {
         @extend %main-m-security;
+        @extend %main-m-security1;
     }
     .main-m-security2 {
         @extend %main-m-security;
+        @extend %main-m-security1;
     }
     .main-m-security3 {
         @extend %main-m-security;
+        @extend %main-m-security1;
     }
     .main-m-security4 {
         @extend %main-m-security;
+        @extend %main-m-security1;
     }
     .main-m-security5 {
         @extend %main-m-security;
+        @extend %main-m-security1;
     }
     .main-m-security6 {
         @extend %main-m-security;
+        @extend %main-m-security1;
     }
     .main-m-security7 {
         @extend %main-m-security;
+        @extend %main-m-security1;
     }
     .main-b-list {
-        height: 100px;
-        background: blue;
+        .main-b-list-top {
+            font-size: $font20;
+            line-height: 30px;
+            margin-right: 10px;
+        }
+        .main-b-list-ul {
+            a {
+                float: left;
+                display: block;
+                margin-bottom: 20px;
+                margin-right: 20px;
+                &:nth-of-type(5n) {
+                    margin-right: 0;
+                }
+                &:hover {
+                    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+                    transform: translateY(-2px);
+                    transition: 0.2s all ease-out;
+                }
+                li {
+                    background: #fff;
+                    width: 220px;
+                    text-align: center;
+                    box-sizing: border-box;
+                    padding: 20px 20px 0 20px;
+                    img {
+                        width: 180px;
+                        height: 180px;
+                        margin: 0 auto;
+                    }
+                    p {
+                        font-size: $font14;
+                        line-height: 20px;
+                        margin-top: 25px;
+                        margin-bottom: 10px;
+                    }
+                    span {
+                        color: #dd0e00;
+                        font-size: 20px;
+                    }
+                    i {
+                        display: block;
+                        border: 1px solid #f17f38;
+                        height: 15px;
+                        margin: 1px;
+                        width: 50px;
+                        font-size: $font12;
+                        margin: 0 auto;
+                        margin-top: 10px;
+                        font-style: normal;
+                    }
+                }
+            }
+        }
     }
     .main-b-box {
         font-size: $font18;
