修改了一些静态页面

--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -13,9 +13,9 @@
         margin: 0 auto;
         .banner-box-pic {
             float: left;
-            img {
-                width: 100%;
-            }
+            // img {
+            //     width: 100%;
+            // }
         }
     }
     ol {
