--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -119,27 +119,29 @@
                 text-decoration: none;
                 text-align: center;
             }
-            .header-ul-box {
-                background: rgba(255, 255, 255, 0.98);
-                box-shadow: 0 0 3px rgba(0, 0, 0, .2);
-                box-sizing: border-box;
-                display: none;
-                height: 530px;
-                left: 100%;
-                overflow: hidden;
-                padding: 20px 20px 20px 0;
-                position: absolute;
-                top: 0;
-                width: 950px;
-                a {
-                    color: #666;
-                    text-align: left;
-                    &:hover {
-                        text-decoration: underline;
-                        color: red;
-                    }
+        }
+        .header-ul-box {
+            background: rgba(255, 255, 255, 0.98);
+            box-shadow: 0 0 3px rgba(0, 0, 0, .2);
+            box-sizing: border-box;
+            display: none;
+            height: 530px;
+            left: 100%;
+            position: absolute;
+            top: 0;
+            width: 950px;
+            z-index: 10;
+            a {
+                color: #666;
+                text-align: left;
+                &:hover {
+                    text-decoration: underline;
+                    color: red;
                 }
             }
+        }
+        .active1 {
+            background: rgba(51, 51, 51, 0.6);
         }
     }
 }
@@ -150,6 +152,7 @@
     z-index: 111;
     left: 280px;
     text-align: center;
+    display: none;
     a {
         display: block;
         padding: 10px;
