--- a/src/style/index.css
+++ b/src/style/index.css
@@ -196,31 +196,33 @@ input::-webkit-input-placeholder {
   outline: none;
   text-decoration: none;
   text-align: center; }
-.header-content .header-list .header-list-ul .header-ul-box {
+.header-content .header-list .header-ul-box {
   background: rgba(255, 255, 255, 0.98);
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   display: none;
   height: 530px;
   left: 100%;
-  overflow: hidden;
-  padding: 20px 20px 20px 0;
   position: absolute;
   top: 0;
-  width: 950px; }
-.header-content .header-list .header-list-ul .header-ul-box a {
+  width: 950px;
+  z-index: 10; }
+.header-content .header-list .header-ul-box a {
   color: #666;
   text-align: left; }
-.header-content .header-list .header-list-ul .header-ul-box a:hover {
+.header-content .header-list .header-ul-box a:hover {
   text-decoration: underline;
   color: red; }
+.header-content .header-list .active1 {
+  background: rgba(51, 51, 51, 0.6); }
 
 .index-elecator-box {
   position: fixed;
   top: 50%;
   z-index: 111;
   left: 280px;
-  text-align: center; }
+  text-align: center;
+  display: none; }
 .index-elecator-box a {
   display: block;
   padding: 10px;
@@ -234,7 +236,7 @@ input::-webkit-input-placeholder {
   color: red; }
 
 .banner {
-  width: 100%;
+  width: 1920px;
   background-color: oldlace;
   height: 530px;
   position: relative;
@@ -247,26 +249,27 @@ input::-webkit-input-placeholder {
   top: 0px;
   height: 530px;
   width: 1903px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  overflow: hidden; }
 .banner .banner-box .banner-box-pic {
   float: left; }
 .banner ol {
   position: absolute;
-  left: 50%;
+  left: 1025px;
   transform: translate(-50%, 0);
   bottom: 10px; }
 .banner ol li {
   float: left;
-  width: 20px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
   text-indent: -999em;
   opacity: 0.5;
   margin-right: 10px;
   cursor: pointer;
   border: 2px solid #000; }
-.banner ol li .active {
-  background: blue; }
+.banner .active {
+  background-color: rebeccapurple; }
 
 .banner-lbtn {
   position: absolute;
@@ -275,7 +278,7 @@ input::-webkit-input-placeholder {
   color: #fff;
   font-size: 100px;
   text-decoration: none;
-  left: 50%;
+  left: 940px;
   margin-left: -360px; }
 
 .banner-rbtn {
@@ -286,7 +289,7 @@ input::-webkit-input-placeholder {
   font-size: 100px;
   text-decoration: none;
   margin-right: -590px;
-  right: 50%; }
+  left: 1480px; }
 
 .main-content .main-m-security1, .main-content .main-m-security2, .main-content .main-m-security3, .main-content .main-m-security4, .main-content .main-m-security5, .main-content .main-m-security6, .main-content .main-m-security7 {
   height: 1120px;
