--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -110,14 +110,14 @@
         .header-list-ul {
             a {
                 box-sizing: border-box;
-                display: block;
+                display: inline-block;
                 height: 48px;
                 padding: 9px 30px;
                 width: 100%;
                 color: #fff;
                 outline: none;
                 text-decoration: none;
-                text-align: center;
+                text-align: left;
             }
         }
         .header-ul-box {
@@ -150,9 +150,10 @@
     position: fixed;
     top: 50%;
     z-index: 111;
-    left: 280px;
+    right: 50%;
     text-align: center;
     display: none;
+    margin-right: 598px;
     a {
         display: block;
         padding: 10px;
@@ -165,5 +166,39 @@
         &:hover {
             color: red;
         }
+    }
+}
+
+// 浏览器右侧一直可见的盒子
+.index-right {
+    border-left: 1px solid #e7e7e7;
+    bottom: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 39px;
+    z-index: 100;
+    transition: right .2s;
+    background-color: #fff;
+    background: rgba(255, 255, 255, 0.8);
+    .index-right-top {
+        margin-top: 300px;
+        a {
+            box-sizing: border-box;
+            display: block;
+            height: 36px;
+            padding: 10px;
+            text-align: center;
+            transition: 0.2s all linear;
+            width: 100%;
+        }
+    }
+    .index-right-mid {
+        padding: 10px;
+        margin-top: 80px;
+    }
+    .index-right-bottom {
+        padding: 10px;
+        display: none;
     }
 }
