写完了楼层效果

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -163,9 +163,12 @@
         line-height: 12px;
         box-sizing: border-box;
         border-bottom: 1px solid red;
-        &:hover {
-            color: red;
-        }
+        // &:hover {
+        //     color: red;
+        // }
+    }
+    .active2 {
+        color: red;
     }
 }
 
