--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -1,18 +1,24 @@
-.banner {
-    width: 1920px;
-    background-color: oldlace;
+.banner-a {
+    min-width: 100%;
     height: 530px;
     position: relative;
+    overflow: hidden;
+}
+
+.banner {
+    width: 1902px;
+    background-color: oldlace;
+    height: 530px;
+    position: absolute;
     left: 50%;
-    margin-left: -952px;
+    transform: translateX(-50%);
     overflow: hidden;
     .banner-box {
         position: absolute;
         left: 0px;
         top: 0px;
         height: 530px;
-        width: 1903px;
-        margin: 0 auto;
+        width: 100%;
         overflow: hidden;
         .banner-box-pic {
             float: left;
