--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -94,7 +94,7 @@
 
 .main {
     width: $page-w;
-    background: #ddd;
+    background: #f0f0f0;
 }
 
 .main-content {
@@ -372,6 +372,12 @@
                         line-height: 20px;
                         margin-top: 25px;
                         margin-bottom: 10px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        width: 180px;
                     }
                     span {
                         color: #dd0e00;
