--- a/src/sass/_top.scss
+++ b/src/sass/_top.scss
@@ -12,17 +12,24 @@
 
 .top-img {
     text-align: center;
-    width: 100%;
+    width: 1180px;
     background: #333;
     height: 90px;
     // overflow: hidden;
     position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    img {
+        position: absolute;
+        top: 0;
+        left: -31%;
+    }
     .inner-btn {
         margin: 0 auto;
         max-width: 1180px;
         position: absolute;
         top: 0;
-        right: 380px;
+        right: 0;
         width: 20px;
         height: 20px;
         border-radius: 50%;
