--- a/src/style/list.css
+++ b/src/style/list.css
@@ -286,6 +286,12 @@ input::-webkit-input-placeholder {
     line-height: 20px;
     margin-top: 25px;
     margin-bottom: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    width: 180px;
 }
 
 .main-content .main-b-list .main-b-list-ul a li span {
