--- a/src/style/detail.css
+++ b/src/style/detail.css
@@ -38,6 +38,10 @@ input::-webkit-input-placeholder {
     color: #fff;
 }
 
+input {
+    border: none;
+}
+
 .clear:after {
     content: ".";
     display: block;
@@ -241,6 +245,218 @@ input::-webkit-input-placeholder {
     width: 1180px;
     background: #ddd;
     margin: 0 auto;
+    height: 600px;
+    position: relative;
+}
+
+input {
+    border: 0;
+}
+
+.wrap {
+    float: left;
+    position: relative;
+}
+
+#spic {
+    width: 400px;
+    height: 400px;
+    border: 1px solid #000;
+    float: left;
+    position: relative;
+}
+
+#spic img {
+    width: 400px;
+    height: 400px;
+}
+
+#sf {
+    width: 50px;
+    height: 50px;
+    background: orange;
+    opacity: 0.3;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    visibility: hidden;
+}
+
+#bf {
+    width: 400px;
+    height: 500px;
+    border: 1px solid #000;
+    overflow: hidden;
+    position: absolute;
+    left: 410px;
+    visibility: hidden;
+    z-index: 100;
+}
+
+#bf img {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 800px;
+    height: 800px;
+}
+
+#ulist {
+    position: absolute;
+    left: 0px;
+    top: 430px;
+    width: 402px;
+    height: 56px;
+    overflow: hidden;
+}
+
+#ulist a {
+    float: left;
+    width: 10px;
+    height: 54px;
+    border: 1px solid #ccc;
+    text-decoration: none;
+    line-height: 56px;
+    text-align: center;
+    background: #fff;
+}
+
+#list {
+    float: left;
+    margin-left: 18px;
+    width: 372px;
+    position: relative;
+}
+
+#list li {
+    float: left;
+    width: 56px;
+    height: 56px;
+    padding-right: 6px;
+}
+
+#list li img {
+    width: 52px;
+    height: 52px;
+    border: 1px solid #ccc;
+}
+
+.wrap ul {
+    list-style: none;
+    float: left;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+
+.wrap ul li {
+    float: left;
+    width: 56px;
+    height: 56px;
+    padding-right: 6px;
+}
+
+.wrap ul li img {
+    width: 52px;
+    height: 52px;
+    border: 1px solid #ccc;
+}
+
+#right {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    color: #333;
+}
+
+#left {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 2;
+    color: #fff;
+}
+
+.goodsinfo {
+    margin: 100px 0 0 100px;
+}
+
+.goodsinfo-img {
+    width: 200px;
+    height: 200px;
+    float: left;
+}
+
+.goodsinfo-img img {
+    width: 200px;
+    height: 200px;
+}
+
+.goodsinfo-word {
+    overflow: hidden;
+    float: left;
+}
+
+.p-name {
+    width: 350px;
+    height: 50px;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+
+.p-name .loadtitle {
+    font: 16px "微软雅黑";
+    color: #666666;
+}
+
+.p-price {
+    margin-left: 50px;
+    margin-top: 10px;
+    width: 300px;
+    height: 50px;
+    background: rgba(183, 183, 183, 0.4);
+    line-height: 50px;
+}
+
+.p-btn {
+    margin-top: 20px;
+}
+
+.p-btn input {
+    display: inline-block;
+    width: 50px;
+    height: 46px;
+    font-size: 20px;
+    font-family: "微软雅黑";
+    color: black;
+    margin-left: 50px;
+    border: 1px solid gray;
+    float: left;
+}
+
+.p-btn a {
+    display: block;
+    width: 100px;
+    height: 50px;
+    background-color: red;
+    font-size: 16px;
+    font-family: "微软雅黑";
+    color: white;
+    line-height: 50px;
+    text-align: center;
+    float: left;
+    margin-left: 10px;
+}
+
+.box {
+    width: 200px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    border: 1px solid red;
 }
 
 
