--- a/src/style/index.css
+++ b/src/style/index.css
@@ -408,6 +408,25 @@ html.body {
 .index-right .index-right-bottom {
   padding: 10px;
   display: none;
+  position: relative;
+}
+.index-right .index-right-bottom .index-right-bottom-pos {
+  position: absolute;
+  width: 90px;
+  height: 20px;
+  line-height: 20px;
+  left: -89px;
+  top: 10px;
+  text-align: center;
+  background-color: #fff;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 5px;
+  font-size: 12px;
+  z-index: 20;
+  display: none;
+}
+.index-right:hover .index-right-bottom-pos {
+  display: block;
 }
 
 .banner-a {
