--- a/src/style/registry.css
+++ b/src/style/registry.css
@@ -261,7 +261,7 @@ input::-webkit-input-placeholder {
     text-align: center;
     font-weight: 400;
     color: #36b447;
-    line-height: 40px;
+    line-height: 60px;
 }
 
 .main-form-input {
@@ -279,20 +279,22 @@ input::-webkit-input-placeholder {
     outline: none;
 }
 
-.main-porm-span {
+.main-form-span {
     width: 300px;
     margin: 0 auto;
     font-size: 12px;
     line-height: 25px;
 }
 
-.main-porm-submit {
+.main-form-submit {
     display: block;
     width: 300px;
     height: 40px;
     margin: 0 auto;
     border: none;
     background-color: #36b447;
+    color: #fff;
+    font-size: 20px;
 }
 
 
