--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -224,3 +224,36 @@
         display: block;
     }
 }
+
+.t-banner {
+    background-color: rgba(28, 28, 30, .75);
+    bottom: 0;
+    // display: none;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 999;
+    .t-banner-box {
+        width: 400px;
+        height: 533px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -200px;
+        margin-top: -266px;
+        img {
+            width: 100%;
+        }
+        .t-banner-btn {
+            position: absolute;
+            right: 5px;
+            top: 5px;
+            border-radius: 50%;
+            border: none;
+            outline: none;
+            cursor: pointer;
+        }
+    }
+}
