--- a/src/style/detail.css
+++ b/src/style/detail.css
@@ -238,12 +238,11 @@ input {
 
 .main {
     width: 100%;
-    background: #ddd;
+    background: #fff;
 }
 
 .main-content {
     width: 1180px;
-    background: #ddd;
     margin: 0 auto;
     height: 600px;
     position: relative;
@@ -255,20 +254,19 @@ input {
 
 .wrap {
     float: left;
+    border: 1px solid transparent;
     position: relative;
 }
 
 #spic {
     width: 400px;
     height: 400px;
-    border: 1px solid #000;
     float: left;
     position: relative;
 }
 
 #spic img {
-    width: 400px;
-    height: 400px;
+    width: 100%;
 }
 
 #sf {
@@ -378,7 +376,7 @@ input {
 }
 
 .goodsinfo {
-    margin: 100px 0 0 100px;
+    margin: 50px 0 0 100px;
 }
 
 .goodsinfo-img {
@@ -414,24 +412,67 @@ input {
     margin-top: 10px;
     width: 300px;
     height: 50px;
-    background: rgba(183, 183, 183, 0.4);
+    background: #fafafa;
     line-height: 50px;
+    color: red;
+}
+
+.p-price i {
+    font-style: normal;
+    font-size: 20px;
+}
+
+.p-box2,
+.p-box3,
+.p-box4 {
+    float: left;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+
+.p-box3,
+.p-box4 {
+    border-radius: 5px;
+    border: 1px solid #DDD;
+    color: #333;
+    display: block;
+    height: 26px;
+    line-height: 26px;
+    padding: 0 20px;
+}
+
+.p-box2 {
+    font-size: 14px;
+    color: #999;
+    line-height: 30px;
 }
 
 .p-btn {
     margin-top: 20px;
 }
 
-.p-btn input {
-    display: inline-block;
-    width: 50px;
-    height: 46px;
-    font-size: 20px;
-    font-family: "微软雅黑";
-    color: black;
+.p-btn-span {
+    font-size: 14px;
+    color: #999;
+    line-height: 30px;
     margin-left: 50px;
-    border: 1px solid gray;
-    float: left;
+}
+
+.p-btn input {
+    background: #fff;
+    color: #999;
+    font-family: arial;
+    font-size: 14px;
+    padding: 0;
+    text-align: center;
+    width: 70px;
+    border: 1px solid #ddd;
+    height: 26px;
+    line-height: 26px;
+    margin-left: -1px;
+    vertical-align: middle;
+    margin-left: 50px;
+    outline: none;
 }
 
 .p-btn a {
@@ -457,6 +498,27 @@ input {
     right: 0px;
     top: 0px;
     border: 1px solid red;
+}
+
+.p-btn-shop a {
+    display: block;
+    border: 1px solid transparent;
+    cursor: pointer;
+    display: inline-block;
+    outline: 0;
+    padding: 0;
+    text-align: center;
+    white-space: nowrap;
+    border-radius: 6px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 38px;
+    width: 200px;
+    background-color: #F63;
+    background: -webkit-linear-gradient(top, #F33 0, #F63 100%);
+    color: #fff;
+    margin-left: 50px;
+    margin-top: 100px;
 }
 
 
