--- a/src/style/registry.css
+++ b/src/style/registry.css
@@ -281,6 +281,7 @@ input::-webkit-input-placeholder {
 
 .main-form-span {
     width: 300px;
+    height: 25px;
     margin: 0 auto;
     font-size: 12px;
     line-height: 25px;
