--- a/src/style/cart.css
+++ b/src/style/cart.css
@@ -714,7 +714,7 @@ em {
     height: 18px;
     line-height: 18px;
     padding: 1px 0;
-    width: 16px;
+    width: 14px;
     text-align: center;
     color: #666;
     margin: 0;
@@ -807,6 +807,11 @@ em {
     display: block;
     width: 96px;
     height: 52px;
+    background-color: red;
+    line-height: 52px;
+    font-size: 20px;
+    color: #000;
+    text-align: center;
 }
 
 .price-sum {
